<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Blue Architecture</string>
    <string name="action_settings">Settings</string>
    <string name="edit_quantity">Click on a product to edit the quantity</string>
    <string name="subtotal">Subtotal: $</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="villa_california">Villa California</string>
    <string name="designed_by_name">California villa designed by N. Hassan</string>
    <string name="product_price">Product Price</string>
    <string name="product_description">Product Description</string>
    <string name="currently_in_cart">Currently in Cart: </string>
    <string name="quantity">Quantity</string>
    <string name="quantityset">Quantity: </string>
    <string name="set_quantity">Set Quantity</string>
    <string name="unit_dollar">$ </string>

    <string-array name="nav_drawer_items">
        <item>Product Catalog</item>
        <item>Shopping Cart</item>
        <item>Pay Cash</item>
        <item>Call us</item>
        <item>Help</item>
        <item>Exit</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/home</item>
        <item>@drawable/shoppingcart_128x128</item>
        <item>@drawable/paycash_128x128</item>
        <item>@drawable/phonecall_128x128</item>
        <item>@drawable/help_256x256</item>
        <item>@drawable/exit_128x128</item>
    </array>

</resources>