<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- The main content view -->

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <!-- Add content here -->

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#ffffff"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/LinearLayoutHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/ImageViewProduct"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dip"
                        android:contentDescription="@string/designed_by_name"
                        android:src="@drawable/californiavilla" >
                    </ImageView>

                    <TextView
                        android:id="@+id/TextViewProductTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dip"
                        android:text="@string/villa_california"
                        android:textColor="#000000"
                        android:textSize="26sp" >
                    </TextView>
                </LinearLayout>

                <TextView
                    android:id="@+id/TextViewProductPrice"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    android:text="@string/product_price" >
                </TextView>

                <TextView
                    android:id="@+id/TextViewProductDetails"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    android:text="@string/product_description"
                    android:textColor="#000000" >
                </TextView>

                <LinearLayout
                    android:id="@+id/linearLayoutCurrentlyInCart"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textViewCurrentlyInCart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dip"
                        android:text="@string/currently_in_cart"
                        android:textColor="#000000"
                        android:textSize="20sp" >
                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutAddLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quantity"
                        android:textColor="#000000" >
                    </TextView>

                    <EditText
                        android:id="@+id/editTextQuantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:inputType="number"
                        android:text="" >
                    </EditText>

                    <Button
                        android:id="@+id/ButtonAddToCart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/set_quantity" >
                    </Button>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>

    <!-- The navigation drawer -->

    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#d6d6d6"
        android:choiceMode="singleChoice"
        android:divider="#e5e5e5"
        android:dividerHeight="1dp" />

</android.support.v4.widget.DrawerLayout>