<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- The main content view -->

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <!-- Add content here -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:text="@string/shopping_cart"
                android:layout_gravity="center"
                android:textColor="#000000"
                android:textSize="24sp" >
            </TextView>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:text="@string/edit_quantity" >
            </TextView>

            <TextView
                android:id="@+id/TextViewSubtotal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:text="@string/subtotal"
                android:textColor="#000000"
                android:textStyle="bold" >
            </TextView>

            <ListView
                android:id="@+id/ListViewCatalog"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:cacheColorHint="#ffffff"
                android:choiceMode="multipleChoice"
                android:clickable="true" >
            </ListView>

            <LinearLayout
                android:id="@+id/LinearLayoutCheckout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="5dip"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/Button02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/proceed_to_checkout" >
                </Button>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <!-- The navigation drawer -->

    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#d6d6d6"
        android:choiceMode="singleChoice"
        android:divider="#e5e5e5"
        android:dividerHeight="1dp" />

</android.support.v4.widget.DrawerLayout>